--- a/css/estilos.css
+++ b/css/estilos.css
@@ -91,7 +91,7 @@ button,
 
 /* footer*/
 
-footer{
+footer {
     padding-top: 80px;
 }
 
@@ -167,37 +167,33 @@ footer{
     padding: 30px;
 }
 
-.integrantes {
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    grid-template-rows: repeat(4, 25%);
-    padding: 20px;
-}
-
-.Bangchan,
-.Felix,
-.Hyunjin,
-.Leeknow,
-.IN,
-.Seungmin,
-.Changbin,
-.Han {
-    display: flex;
-    padding: 20px;
-}
-
-.Bangchan,
-.Hyunjin,
-.Leeknow,
-.Seungmin{
-    text-align: right;
-}
-
-.integrantes div img{
-    height: 200px;
+.integrantes div img {
+    height: auto;
     width: 300px;
 }
 
-.integrantes div p{
+.integrantes div p {
     font-size: 12px;
 }
+
+.Bangchan,
+.Hyunjin,
+.Leeknow,
+.Seungmin {
+    text-align: right;
+}
+
+
+@media screen and (max-width: 1199px) {
+.integrantes div  {
+        text-align: center;
+    }
+}
+/*
+@media screen and (max-width: 1199px) {
+    .integrantes .row .Changbin, .integrantes .row .Felix {
+        display: flex;
+        flex-direction: column-reverse;
+        }
+    }
+*/
