--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,104 +22,105 @@ p {
 
 /* logo, navegador, buscador*/
 /* line 26, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-header {
-  display: flex;
-  height: 60px;
+nav {
   background-color: #393e46;
-  justify-content: space-around;
 }
 
-/* line 32, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-header .logo img {
+/* line 29, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+nav img {
   height: 60px;
   width: 130px;
-  display: flex;
   background-color: #393e46;
 }
 
-/* line 39, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-header .navbar,
-header .navbar .container-fluid {
+/* line 35, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+nav .container-fluid,
+nav .navbar-brand,
+nav .collapse,
+nav .container-fluid .navbar-toggler span {
   background-color: #393e46;
 }
 
 /* line 44, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-header .navbar .container-fluid .navbar-toggler span {
-  background-color: #393e46;
-}
-
-/* line 49, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 ul li a,
 .nav-link {
   text-decoration: none;
   color: white;
-  font-size: medium;
+  font-size: large;
   font-family: 'Roboto', sans-serif;
   background-color: #393e46;
 }
 
-/* line 58, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-.buscador form {
-  display: flex;
-  background-color: #393e46;
-  justify-content: center;
+/* line 53, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+.collapse ul li a:hover {
+  color: #b25068;
 }
 
-/* line 63, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-.buscador form input {
+/* line 57, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+form {
+  background-color: #393e46;
+}
+
+/* line 60, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+form input {
   background-color: #eeeeee;
   color: #b25068;
   border-radius: 5px;
   height: 25px;
-  font-size: small;
+  font-size: medium;
 }
 
-/* line 71, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-.buscador form button {
+/* line 68, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+form button {
   width: 30px;
 }
 
-/* line 76, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 73, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 button,
 .suscribirse input {
   background-color: #eeeeee;
   color: #b25068;
   border-radius: 5px;
   height: 25px;
-  font-size: small;
+  font-size: medium;
 }
 
 /*Main index*/
-/* line 87, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 84, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .row {
   padding-bottom: 40px;
-  font-size: small;
+  padding-top: 40px;
 }
 
-/* line 91, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 88, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .row .hero {
   padding: 20px;
 }
 
-/* line 95, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 92, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .row .titulo_album {
   padding-top: 20px;
 }
 
-/* line 99, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 96, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .row .col-xl-6 img {
   height: 100%;
   width: 100%;
   padding-top: 50px;
 }
 
+/* line 102, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+.row .col-xl-6 p {
+  font-size: 15px;
+}
+
 /* footer*/
-/* line 108, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 110, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 footer {
   padding-top: 80px;
 }
 
-/* line 112, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 114, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .pie_pagina .grupo_1,
 .pie_pagina .col-xl-6,
 .pie_pagina .grupo_1 .suscribirse,
@@ -129,7 +130,7 @@ footer {
   padding-top: 5px;
 }
 
-/* line 121, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 123, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .pie_pagina .grupo_2 .lema p,
 .pie_pagina .grupo_2 .lema p strong,
 .pie_pagina .grupo_2 .row {
@@ -140,7 +141,7 @@ footer {
   font-size: large;
 }
 
-/* line 131, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 133, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .pie_pagina .grupo_2 .small p {
   font-size: small;
   padding-bottom: 20px;
@@ -148,36 +149,50 @@ footer {
   color: white;
 }
 
-/* line 138, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 140, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .pie_pagina .grupo_1 .iconos a:hover {
   color: #b25068;
 }
 
 /*Discografia*/
-/* line 144, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 146, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .titulo_disco {
   padding: 30px;
 }
 
-/* line 148, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
-.col-xl-3 {
-  padding: 20px;
+/* line 150, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+.cuerpo_principal {
+  padding-bottom: 120px;
 }
 
 /*tour*/
-/* line 153, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 156, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+.parallax {
+  width: 100%;
+  height: 350px;
+  background: url(../src/Grupal.jpg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+/* line 169, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .titulo_tour h1 {
   padding: 30px;
 }
 
-/* line 157, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 173, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .fechas {
   padding-bottom: 30px;
-  font-size: medium;
+  font-size: 18px;
   text-align: center;
 }
 
-/* line 162, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 178, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .fechas button {
   width: 60px;
   height: 30px;
@@ -186,29 +201,29 @@ footer {
 }
 
 /*contenido*/
-/* line 172, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 188, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .titulo_contenido h1 {
   padding: 30px;
 }
 
 /*Miembros*/
-/* line 178, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 194, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .titulo_miembros h1 {
   padding: 30px;
 }
 
-/* line 182, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 198, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .integrantes div img {
   height: auto;
   width: 300px;
 }
 
-/* line 187, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 203, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .integrantes div p {
-  font-size: 12px;
+  font-size: 13px;
 }
 
-/* line 191, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+/* line 207, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
 .Bangchan,
 .Hyunjin,
 .Leeknow,
@@ -217,9 +232,23 @@ footer {
 }
 
 @media screen and (max-width: 1199px) {
-  /* line 199, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+  /* line 215, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
   .integrantes div {
     text-align: center;
+  }
+  /* line 219, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+  .row .col-xl-4 iframe {
+    margin: 20px;
+    width: 100%;
+  }
+  /* line 224, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+  form {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+  /* line 229, ../../../Desktop/Full stack/Docus VS/StrayKids/sass/estilos.scss */
+  .cuerpo_principal .col-xl-3 {
+    padding: 20px;
   }
 }
 
